--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript">
         $(window).load(function () {
-            $(".loader").fadeOut("500000");
+            $(".loader").fadeOut("3000");
         })
     </script>
     <!-- Loader -->
@@ -432,24 +432,24 @@
         <h2>Mon Portfolio</h2>
         <ul class="port-style">
             <div class="diamondswrap" id="port-items">
-                <div class="item" style="background-image: url(img/portfolio/photo/affichemexico.jpg);"><span class="item-hover"><h4>Projet 1</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/affichepopup.jpg);"><span class="item-hover"><h4>Projet 2</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/eachxother.png);"><span class="item-hover"><h4>Projet 3</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/eaufeu.jpg);"><span class="item-hover"><h4>Projet 4</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/Flyers.jpg);"><span class="item-hover"><h4>Projet 5</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/jpohag.jpg);"><span class="item-hover"><h4>Projet 6</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/listeleclerc.jpg);"><span class="item-hover"><h4>Projet 7</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/noel.png);"><span class="item-hover"><h4>Projet 8</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/oiseaux.jpg);"><span class="item-hover"><h4>Projet 9</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/pictogarage.jpg);"><span class="item-hover"><h4>Projet 10</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/sit.jpg);"><span class="item-hover"><h4>Projet 11</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/photo/selfieppfm.jpg);"><span class="item-hover"><h4>Projet 12</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/fleche.png);"><span class="item-hover"><h4>Projet 13</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/fleche.png);"><span class="item-hover"><h4>Projet 14</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/video/);"><span class="item-hover"><h4>Projet 15</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/video/);"><span class="item-hover"><h4>Projet 16</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/video/);"><span class="item-hover"><h4>Projet 17</h4><a href="#">Voir</a></span></div>
-                <div class="item" style="background-image: url(img/portfolio/video/);"><span class="item-hover"><h4>Projet 18</h4><a href="#">Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/affichemexico.jpg);"><span class="item-hover"><h4>Affiche Soirée</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/affichepopup.jpg);"><span class="item-hover"><h4>Affiche evènement</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/eachxother.png);"><span class="item-hover"><h4>Affiche marque</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/pictogarage.jpg);"><span class="item-hover"><h4>Picto application mobile</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/noel.png);"><span class="item-hover"><h4>Fond carte Noël</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/jpohag.jpg);"><span class="item-hover"><h4>Affiche Portes ouvertes</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/appliconv.png);"><span class="item-hover"><h4>Interface convertisseur</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/piclab.png);"><span class="item-hover"><h4>Logo Fablab Colmar</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/listeleclerc.jpg);"><span class="item-hover"><h4>Liste de course</h4><a href="#">Projet professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/Flyers.jpg);"><span class="item-hover"><h4>Flyers evènement</h4><a href="#">Projet professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/sit.jpg);"><span class="item-hover"><h4>Logo officiel</h4><a href="#">Projet professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/oiseaux.jpg);"><span class="item-hover"><h4>Fond créatif 1</h4><a href="#">Projet personnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/eaufeu.jpg);"><span class="item-hover"><h4>Fond créatif 2</h4><a href="#">Projet personnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/photo/selfieppfm.jpg);"><span class="item-hover"><h4>Affiche concours PPFM</h4><a href="#">Projet personnel/professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/video/ficmax.png);"><span class="item-hover"><h4>Court-métrage Fiction</h4><a href="#">Projet scolaire<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/video/ppfmgonflette.png);"><span class="item-hover"><h4>Court-métrage PPFM</h4><a href="#">Projet personnel/professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/video/ppfmselfie.png);"><span class="item-hover"><h4>Court-métrage PPFM</h4><a href="#">Projet personnel/professionnel<br/>Voir</a></span></div>
+                <div class="item" style="background-image: url(img/portfolio/video/srgenerique.png);"><span class="item-hover"><h4>Introduction Fiction</h4><a href="#">Projet personnel<br/>Voir</a></span></div>
             </div>
         </ul>
     </section>
